# imxoiam-gear-academy

./: .gitignore  README.md
escrow/escrow/: Cargo.toml  build.rs
escrow/escrow/io/: Cargo.toml
escrow/escrow/io/src/: lib.rs
escrow/escrow/src/: lib.rs
escrow/escrow/state/: Cargo.toml
escrow/escrow/state/src/: lib.rs
escrow/escrow/tests/: escrow_test.rs
escrow/tamagotchi_v2/: .binpath  Cargo.toml  build.rs
escrow/tamagotchi_v2/src/: lib.rs
escrow/tamagotchi_v2/state/: build.rs
escrow/tamagotchi_v2/state/src/: lib.rs
escrow/tamagotchi_v2/tamagotchi-io/src/: lib.rs
escrow/tamagotchi_v2/tests/: hello_world_test.rs
hello-world/: Cargo.toml  build.rs
hello-world/src/: lib.rs
hello-world/tamagotchi-io/: Cargo.toml
hello-world/tamagotchi-io/src/: lib.rs
hello-world/tests/: hello_world_test.rs
store/store-io/: .binpath  .metahash  Cargo.toml  build.rs  store.meta.txt
store/store-io/io/: Cargo.toml
store/store-io/io/src/: lib.rs
store/store-io/src/: lib.rs
store/tamagotchi_v4/: .binpath  .metahash  Cargo.toml  tamagotchi_v4.meta.txt
store/tamagotchi_v4/src/: lib.rs
store/tamagotchi_v4/state/: Cargo.toml
store/tamagotchi_v4/tamagotchi-io/: Cargo.toml
store/tamagotchi_v4/tamagotchi-io/src/: lib.rs
token/tamagotchi_v3/: .binpath  .metahash  Cargo.toml  tamagotchi_v2.meta.txt
token/tamagotchi_v3/src/: lib.rs
token/tamagotchi_v3/tamagotchi-io/: Cargo.toml
token/tamagotchi_v3/tamagotchi-io/src/: lib.rs
