[package]
name = "tamagotchi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "testnet" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
tamagotchi_io = { path = "tamagotchi-io" }
[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }