[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
parity-scale-codec = { version = "3", default-features = false }
store-io = { path = "io" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git" }
ft-logic-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git"  }
scale-info = { version = "2", default-features = false }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git",rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
store-io = { path = "io" }

