[package]
name = "tamagotchi-v4"
version = "0.1.0"
edition = "2021"


[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "testnet" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", branch = "testnet" }
store-io = { git = "https://github.com/gear-dapps/smart-contract-academy.git"  }

tamagotchi-io = { path = "tamagotchi-io" }
[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
tamagotchi-io = { path = "tamagotchi-io" }
[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }