[package]
name = "tamagotchi-v4"
version = "0.1.0"
edition = "2021"


[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68"}
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag="2.1.1"}
store-io = { path = "../store-io/io" }
tamagotchi-io = { path = "tamagotchi-io" }
[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68"}
tamagotchi-io = { path = "tamagotchi-io" }
[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68"}